@@ -10,6 +10,10 @@
 	* camel/Makefile.am: Pass also PREFIX to the compiler. Use
 	-no-undefined on Windows. Link with SOCKET_LIBS and PTHREAD_LIB.
 
+	* camel/camel-exchange-provider.c: Include
+	libedataserver/e-data-server-util.h for some Windows-specific
+	functions. Construct the localedir at run-time on Windows.
+
 	* camel/camel-stub-marshal.c: Use closesocket() instead of close()
 	for sockets on Windows. Use camel_read_socket() and
 	camel_write_socket() instead of camel_read() and camel_write().
